--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	
+<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
     <title> Meditação - práticas,benefícios,qualidade de vida </title>
     <link rel="stylesheet" href="styles.css">   
      <style>
