--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
+    header('Content-Type: text/html; charset=utf-8')
     <title> Meditação - práticas,benefícios,qualidade de vida </title>
     <link rel="stylesheet" href="styles.css">   
      <style>
