alteração final index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-    header('Content-Type: text/html; charset=utf-8')
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
     <title> Meditação - práticas,benefícios,qualidade de vida </title>
     <link rel="stylesheet" href="styles.css">   
      <style>
