--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
+    <meta charset="UTF-8"> 
     <title> Meditação - práticas,benefícios,qualidade de vida </title>
     <link rel="stylesheet" href="styles.css">   
      <style>
